WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
62449
[Qt] Fix 'headers' autotest when building inside Qt.
https://bugs.webkit.org/show_bug.cgi?id=62449
Summary
[Qt] Fix 'headers' autotest when building inside Qt.
Andreas Kling
Reported
2011-06-10 04:23:01 PDT
The tests/auto/headers test in Qt fails for qwebplatformplugin.h because it includes <QColor> and for whatever reason, anything but QtCore includes need to be prefixed, i.e <QtGui/QColor>.
Attachments
Proposed patch
(1.11 KB, patch)
2011-06-10 04:24 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2011-06-10 04:24:27 PDT
Created
attachment 96730
[details]
Proposed patch
Andreas Kling
Comment 2
2011-06-10 04:31:28 PDT
Comment on
attachment 96730
[details]
Proposed patch Clearing flags on attachment: 96730 Committed
r88538
: <
http://trac.webkit.org/changeset/88538
>
Andreas Kling
Comment 3
2011-06-10 04:31:36 PDT
All reviewed patches have been landed. Closing bug.
Ademar Reis
Comment 4
2011-06-10 05:45:02 PDT
Revision
r88538
cherry-picked into qtwebkit-2.2 with commit 6ece1fd <
http://gitorious.org/webkit/qtwebkit/commit/6ece1fd
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug