2011-06-10  Andreas Kling  <kling@webkit.org>

Reviewed by Benjamin Poulain.

        [Qt] Fix 'headers' autotest when building inside Qt.
        https://bugs.webkit.org/show_bug.cgi?id=62449

        * Api/qwebkitplatformplugin.h:


git-svn-id: svn://svn.chromium.org/blink/trunk@88538 bbb929c8-8fbe-4397-9dbb-9b2b20218538