third_party/WebKit/Source/WebKit/qt/Api/qwebkitplatformplugin.h
@@ -27,12 +27,12 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
  *  and may be changed from version to version or even be completely removed.
 */
 
-#include <QColor>
 #include <QObject>
 #include <QUrl>
 #if defined(WTF_USE_QT_MULTIMEDIA) && WTF_USE_QT_MULTIMEDIA
 #include <QMediaPlayer>
 #endif
+#include <QtGui/QColor>
 
 class QWebSelectData {
 public:
